; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_midibuf.c_drain_midi_queue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_midibuf.c_drain_midi_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 (i32)* }

@midi_devs = common dso_local global %struct.TYPE_2__** null, align 8
@current = common dso_local global i32 0, align 4
@midi_sleeper = common dso_local global i32* null, align 8
@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @drain_midi_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drain_midi_queue(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @midi_devs, align 8
  %4 = load i32, i32* %2, align 4
  %5 = sext i32 %4 to i64
  %6 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %3, i64 %5
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i64 (i32)*, i64 (i32)** %8, align 8
  %10 = icmp ne i64 (i32)* %9, null
  br i1 %10, label %11, label %38

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %29, %11
  %13 = load i32, i32* @current, align 4
  %14 = call i32 @signal_pending(i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %27, label %16

16:                                               ; preds = %12
  %17 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @midi_devs, align 8
  %18 = load i32, i32* %2, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %17, i64 %19
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i64 (i32)*, i64 (i32)** %22, align 8
  %24 = load i32, i32* %2, align 4
  %25 = call i64 %23(i32 %24)
  %26 = icmp ne i64 %25, 0
  br label %27

27:                                               ; preds = %16, %12
  %28 = phi i1 [ false, %12 ], [ %26, %16 ]
  br i1 %28, label %29, label %37

29:                                               ; preds = %27
  %30 = load i32*, i32** @midi_sleeper, align 8
  %31 = load i32, i32* %2, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i32, i32* %30, i64 %32
  %34 = load i32, i32* @HZ, align 4
  %35 = sdiv i32 %34, 10
  %36 = call i32 @interruptible_sleep_on_timeout(i32* %33, i32 %35)
  br label %12

37:                                               ; preds = %27
  br label %38

38:                                               ; preds = %37, %1
  ret void
}

declare dso_local i32 @signal_pending(i32) #1

declare dso_local i32 @interruptible_sleep_on_timeout(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
